# JARS

./: .gitignore  JARS_User_guide.docx  Python_standard_1_Project_structure_Morshead_revised.docx  README.md  controller.py  jars_gui.py  model.py  pyproject.toml  view.py
src/jars/: controller.py  model.py  view.py
test/: test_model.py
tests/: test_controller.py  test_model.py
