[project]
name = "jars"
version = "0.1.0"
description = ""
authors = [
    {name = "Rich Wood",email = "richard.wood@morsheadconsulting.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.3,<4.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "scipy (>=1.16.0,<2.0.0)"
]
[tool.poetry.dependencies]
python = ">=3.12,<4.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.9.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
