[project]
name = "jars"
version = "0.1.0"
description = ""
authors = [
    { name = "Rich Wood", email = "richard.wood@morsheadconsulting.co.uk" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3,<4.0.0",
    "numpy>=2.3.1,<3.0.0",
    "scipy>=1.16.0,<2.0.0",
]

[dependency-groups]
dev = ["pip-audit>=2.9.0", "ruff>=0.12.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
indent-width = 4

select = ["E", "F", "I", "UP", "RUF"]
ignore = ["F841"]
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
